...
        }}
      />
      <Tabs.Screen
        name="user"
        options={{
          title: t('navigation.settings'),
          tabBarButtonTestID: 'tab-user',
          tabBarLabel: tabLabel(t('navigation.settings')),
          tabBarIcon: ({ color }) => <Ionicons name="settings-outline" size={24} color={color} />,
        }}
      />
    </Tabs>
  );
...
